--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/logoCoworkingpng.png
+    - assets/images/diseno.jpg
+    - assets/images/software.jpeg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
