--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  firebase_auth:
+  google_sign_in:
+  firebase_storage: ^2.1.0
+  cloud_firestore: ^0.9.13
+  generic_bloc_provider: ^1.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -42,6 +48,7 @@ flutter:
     - assets/images/logoCoworkingpng.png
     - assets/images/diseno.jpg
     - assets/images/software.jpeg
+    - assets/images/pagina.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
