--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,11 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth:
   google_sign_in:
-  firebase_storage: ^2.1.0
-  cloud_firestore: ^0.9.13
+  #firebase_storage: ^2.1.0
+  #cloud_firestore: ^0.9.13
   generic_bloc_provider: ^1.0.9
+  firebase_core: ^0.5.2
+  cloud_firestore: ^0.14.3
 
 dev_dependencies:
   flutter_test:
